2015-12-25  Eli Zaretskii  <eliz@gnu.org>

	* info/info-utils.c (copy_converting): When 'iconv' finishes
	conversion, call it with 2nd and 3rd arguments NULL to make sure
	it flushes the last converted character to the output buffer.
	This avoids losing the last character when libiconv conversion is
	stateful.  Restore the input pointer before calling copy_direct if
	'iconv' failed to convert a character.
	(text_buffer_iconv): Use ICONV_CONST to avoid compiler warnings on
	platforms where the 2nd argument to 'iconv' should have the
	'const' qualifier.  Use the passed 'iconv_state' argument rather
	than the global 'iconv_to_output'.

	* info/info-utils.h (text_buffer_iconv): Adjust the prototype to
	use ICONV_CONST.

2015-12-23  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/search.c (looking_at_line): Check line case-insensitively 
	in case Info file has different capitalization for sequences like
	"End Tag Table".  Failure to read file reported by Luc Maranget
	for ocaml manual generated by hevea.

2015-12-23  Gavin Smith  <gavinsmith0123@gmail.com>

	* install-info/tests/defs.in: Put LC_ALL=C to get messages in 
	English.  Test failures reported by Norbert Preining.

2015-12-23  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/Paragraph.pm: Remove empty function from 
	end of file.  This is intended to fix a problem where an error 
	message "Can't call mro_method_changed_in() on anonymous symbol 
	table" would be printed for some versions of Perl.  Error 
	reported by Nelson Beebe for several systems.

2015-12-23  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/display.c (display_update_node_text): Move an assignment 
	to a variable back where it was before, moved on 2015-12-19.  
	Fixes problem with display reported by Benno Schulenberg.

2015-12-22  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/texi2any.pl: Remove spurious space at end of #! line.

2015-12-20  Gavin Smith  <gavinsmith0123@gmail.com>

	* pretest 6.0.90.